Squashed the history
doc: clarify Podman memory limits in getting-started guidance

  State the macOS default and shared WSL memory limit explicitly.

Improve launcher startup diagnostics

  Share one Podman version probe between the announcement and machine
  record. Format log and CA paths for shell use, including log listings
  and error messages.

  Use tunnel consistently for host categories and document why opaque
  remains useful for traffic descriptions.

  Shorten host-command and filter messages, print the host command log
  before the start prompt, and retain a blank separator before the agent UI.

● Both wordings are corrected and the code compiles. Nothing is committed; no test depends on the reworded comments.

  - SECURITY.md's bullet and the constant's doc say the stream is cut at the cap whatever a request declares, a set whose count passes it is refused, and a body
    is copied only whole.
  - The commit message below carries the narrower guarantee.

  Bound clipboard requests; forget a record only once ps shows its group gone

  The clipboard broker read a sandbox-chosen count into the resident
  launcher's heap, and a negative one ended the Windows twin's thread.
  Both twins read one exec's stream to a fixed cap whatever a request
  declares, parse it by line and count, and refuse a set whose count
  passes the cap, has a leading zero, or whose body the stream does not
  hold whole. The shell twin buffers a body in an unlinked file and
  copies it only when its length matches. Incomplete bodies never reach
  the clipboard, and forced teardown leaves no named host temporary
  file containing the buffered body.

  Run-on-host cleanup reported a group ended after signalling it,
  without reading the result, and deleted the record. endGroup now
  answers whether ps lists no member, every ps listing proves itself by
  listing this process (Apple's ps exits 0 and prints nothing when its
  sysctl fails), and a record whose group has a member listed af